<resources>
    <string name="app_name">AndroidCrud</string>
    <string name="product_list">Product List</string>
    <string name="add_product">Add Product</string>
    <string name="crud_operation">Crud Operation</string>
    <string name="first_android_application">First Android Application</string>
    <string name="ProductName">Product Name</string>
    <string name="Description">Description</string>
    <string name="Price">Price</string>
    <string name="Stock_Quantity">StockQuantity</string>
    <string name="save">save</string>
    <string name="Category">Category</string>
    <string name="product_image">product_image</string>
    <string name="choose_file">Choose File</string>
    <string name="no_file_selected">No file selected</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
</resources>